<?xml version="1.0" encoding="UTF-8"?>
<ScrollView
	android:layout_height="wrap_content"
	android:layout_width="fill_parent"
	android:focusableInTouchMode="true"
	android:focusable="true"
	android:id="@+id/scrollView"
	xmlns:android="http://schemas.android.com/apk/res/android">

	<LinearLayout
		android:layout_height="wrap_content"
		android:layout_width="fill_parent"
		android:focusableInTouchMode="true"
		android:focusable="true"
		android:orientation="vertical"
		android:paddingEnd="@dimen/default_padding_keyline"
		android:paddingStart="@dimen/default_padding_keyline">

		<LinearLayout
			android:layout_height="wrap_content"
			android:layout_width="fill_parent"
			android:orientation="vertical">

			<TextView
				android:layout_width="wrap_content"
				android:layout_height="48dp"
				android:fontFamily="sans-serif-medium"
				android:textSize="14sp"
				android:textColor="@color/primary"
				android:gravity="center_vertical"
				android:text="Defemse Picked"/>

			<com.maxkrass.appreciate.views.CheckBoxWidget
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:gravity="center_vertical"
				android:text="Port"
				custom:label="port"
				xmlns:custom="http://schemas.android.com/apk/res-auto">


			</com.maxkrass.appreciate.views.CheckBoxWidget>


			<TextView
				android:layout_width="wrap_content"
				android:layout_height="48dp"
				android:fontFamily="sans-serif-medium"
				android:textSize="14sp"
				android:textColor="@color/primary"
				android:gravity="center_vertical"
				android:text="@string/auto_card_title"/>

			<com.maxkrass.appreciate.views.CheckBoxWidget
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:gravity="center_vertical"
				android:text="Port">


			</com.maxkrass.appreciate.views.CheckBoxWidget>

			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="vertical"
				android:id="@+id/auto_match_list"/>

			<FrameLayout
				android:layout_height="48.0dip"
				android:layout_width="fill_parent">

				<TextView
					android:layout_height="wrap_content"
					android:layout_width="wrap_content"
					android:text="@string/auto_points"
					android:layout_gravity="center_vertical"/>

				<EditText
					android:layout_height="wrap_content"
					android:layout_width="wrap_content"
					android:id="@+id/auto_points_field"
					android:layout_gravity="center|end"
					android:inputType="number"
					android:maxLength="4"
					android:ems="4"
					android:textColor="@color/textColor"
					android:text="@string/zero"/>

			</FrameLayout>

			<FrameLayout
				android:layout_width="fill_parent"
				android:layout_height="48dp">

				<EditText
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:id="@+id/auto_comment_field"
					android:layout_gravity="center"
					android:textColor="@color/textColor"
					android:inputType="textMultiLine"
					android:hint="@string/auto_comment"/>
			</FrameLayout>

		</LinearLayout>

		<LinearLayout
			android:layout_height="wrap_content"
			android:layout_width="fill_parent"
			android:orientation="vertical">

			<TextView
				android:layout_width="wrap_content"
				android:layout_height="48dp"
				android:fontFamily="sans-serif-medium"
				android:textSize="14sp"
				android:textColor="@color/primary"
				android:gravity="center_vertical"
				android:text="@string/tele_card_title"/>

			<LinearLayout
				android:layout_height="wrap_content"
				android:layout_width="fill_parent"
				android:id="@+id/tele_match_list"
				android:orientation="vertical"/>



			<LinearLayout
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:orientation="vertical"
				android:id="@+id/tele_list"/>

			<FrameLayout
				android:layout_width="match_parent"
				android:layout_height="48dp">

				<TextView
					android:layout_height="wrap_content"
					android:layout_width="wrap_content"
					android:text="@string/total_points"
					android:layout_gravity="center_vertical"/>

				<EditText
					android:layout_height="wrap_content"
					android:layout_width="wrap_content"
					android:id="@+id/total_score_field"
					android:layout_gravity="center|end"
					android:singleLine="true"
					android:ems="4"
					android:textColor="@color/textColor"
					android:inputType="numberSigned|numberDecimal"
					android:maxLength="5"
					android:text="@string/zero"/>

			</FrameLayout>

			<FrameLayout
				android:layout_width="fill_parent"
				android:layout_height="48dp">

				<EditText
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:inputType="textMultiLine"
					android:ems="10"
					android:id="@+id/tele_comment_field"
					android:layout_gravity="center"
					android:textColor="@color/textColor"
					android:hint="@string/tele_comment"/>
			</FrameLayout>

		</LinearLayout>

	</LinearLayout>

</ScrollView>