<?xml version="1.0" encoding="UTF-8"?>
<RelativeLayout
	android:layout_height="wrap_content"
	android:layout_width="fill_parent"
	android:focusableInTouchMode="true"
	android:focusable="true"
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto">

	<android.support.v7.widget.Toolbar
		android:layout_height="@dimen/abc_action_bar_default_height_material"
		android:layout_width="match_parent"
		app:title="View Pit Scout"
		android:id="@+id/view_pit_toolbar"
		android:theme="@style/Toolbar.Style"
		android:background="@drawable/ab_background"
		app:contentInsetStart="0dp"/>

	<ScrollView
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_below="@id/view_pit_toolbar">

		<LinearLayout
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:orientation="vertical"
			android:background="@android:color/white">

			<LinearLayout
				android:layout_width="fill_parent"
				android:layout_height="fill_parent"
				android:orientation="vertical"
				android:paddingEnd="16dp"
				android:paddingStart="16dp"
				>

				<TextView
					android:layout_width="wrap_content"
					android:layout_height="48dp"
					android:fontFamily="sans-serif-medium"
					android:textSize="14sp"
					android:textColor="@color/primary"
					android:gravity="center_vertical"
					android:text="@string/main_card_title"/>

				<FrameLayout
					android:layout_height="48.0dip"
					android:layout_width="fill_parent">

					<TextView
						android:layout_height="wrap_content"
						android:layout_width="wrap_content"
						android:text="@string/team_number_label"
						android:layout_gravity="center_vertical"/>

					<TextView
						android:layout_height="wrap_content"
						android:layout_width="wrap_content"
						android:id="@+id/team_number_field"
						android:layout_gravity="center|end"/>

				</FrameLayout>

				<FrameLayout
					android:layout_height="48.0dip"
					android:layout_width="fill_parent">

					<TextView
						android:layout_height="wrap_content"
						android:layout_width="wrap_content"
						android:text="@string/team_name_label"
						android:layout_gravity="center_vertical"/>

					<TextView
						android:layout_height="wrap_content"
						android:layout_width="wrap_content"
						android:id="@+id/team_name_field"
						android:layout_gravity="center|end"/>

				</FrameLayout>

				<FrameLayout
					android:layout_height="48.0dip"
					android:layout_width="fill_parent">

					<TextView
						android:layout_height="wrap_content"
						android:layout_width="wrap_content"
						android:text="@string/drive_label"
						android:layout_gravity="center_vertical"/>

					<TextView
						android:layout_height="wrap_content"
						android:layout_width="wrap_content"
						android:id="@+id/drive_type_field"
						android:layout_gravity="center|end"/>

				</FrameLayout>

				<FrameLayout
					android:layout_height="48.0dip"
					android:layout_width="fill_parent">

					<TextView
						android:layout_height="wrap_content"
						android:layout_width="wrap_content"
						android:alpha="0.87"
						android:text="@string/wheel_label"
						android:layout_gravity="center_vertical"/>

					<TextView
						android:layout_height="wrap_content"
						android:layout_width="wrap_content"
						android:id="@+id/wheel_type_field"
						android:layout_gravity="center|end"/>

				</FrameLayout>

				<FrameLayout
					android:layout_height="48.0dip"
					android:layout_width="fill_parent">

					<TextView
						android:layout_height="wrap_content"
						android:layout_width="wrap_content"
						android:text="@string/num_wheel_label"
						android:layout_gravity="center_vertical"/>

					<TextView
						android:layout_height="wrap_content"
						android:layout_width="wrap_content"
						android:id="@+id/wheel_num_field"
						android:layout_gravity="center|end"/>

				</FrameLayout>

				<FrameLayout
					android:layout_height="48.0dip"
					android:layout_width="fill_parent">

					<TextView
						android:layout_height="wrap_content"
						android:layout_width="wrap_content"
						android:text="@string/num_cims_label"
						android:layout_gravity="center_vertical"/>

					<TextView
						android:layout_height="wrap_content"
						android:layout_width="wrap_content"
						android:id="@+id/cim_num_field"
						android:layout_gravity="center|end"/>

				</FrameLayout>

				<FrameLayout
					android:layout_height="48.0dip"
					android:layout_width="fill_parent">

					<TextView
						android:layout_height="wrap_content"
						android:layout_width="wrap_content"
						android:text="@string/max_speed_label"
						android:layout_gravity="center_vertical"/>

					<TextView
						android:layout_height="wrap_content"
						android:layout_width="wrap_content"
						android:id="@+id/max_speed_field"
						android:layout_gravity="center|end"/>

				</FrameLayout>

				<FrameLayout
					android:layout_width="match_parent"
					android:layout_height="48dp">

					<TextView
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:text="Comment on the robot"
						android:layout_gravity="center|start"/>

					<TextView
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:id="@+id/comment_main_field"
						android:layout_gravity="center|end"/>

				</FrameLayout>

			</LinearLayout>

			<View
				android:layout_width="fill_parent"
				android:layout_height="1dp"
				android:layout_marginTop="16dp"
				android:background="?android:listDivider"/>

			<LinearLayout
				android:layout_height="wrap_content"
				android:layout_width="fill_parent"
				android:orientation="vertical"
				android:layout_marginEnd="16dp"
				android:layout_marginStart="16dp">

				<TextView
					android:layout_height="48dp"
					android:fontFamily="sans-serif-medium"
					android:textSize="14sp"
					android:textColor="@color/primary"
					android:gravity="center_vertical"
					android:layout_width="wrap_content"
					android:text="@string/tele_card_title"/>

				<LinearLayout
					android:layout_height="wrap_content"
					android:layout_width="fill_parent"
					android:id="@+id/tele_list"
					android:orientation="vertical"/>

				<FrameLayout
					android:layout_height="48.0dip"
					android:layout_width="fill_parent">

					<TextView
						android:layout_height="wrap_content"
						android:layout_width="wrap_content"
						android:alpha="0.87"
						android:text="@string/highest_stack_tele_label"
						android:layout_gravity="center_vertical"/>

					<TextView
						android:layout_height="wrap_content"
						android:layout_width="wrap_content"
						android:id="@+id/highest_possible_stack_field"
						android:layout_gravity="center|end"/>

				</FrameLayout>

				<FrameLayout
					android:layout_width="match_parent"
					android:layout_height="48dp">

					<TextView
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_gravity="center|start"
						android:text="Comment on Teleoperated"/>

					<TextView
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_gravity="center|end"
						android:id="@+id/comment_tele_field"/>

				</FrameLayout>

			</LinearLayout>

			<View
				android:layout_width="fill_parent"
				android:layout_height="1dp"
				android:layout_marginTop="16dp"
				android:background="?android:listDivider"/>

			<LinearLayout
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:orientation="vertical"
				android:paddingEnd="16dp"
				android:paddingStart="16dp">

				<TextView
					android:layout_width="wrap_content"
					android:layout_height="48dp"
					android:fontFamily="sans-serif-medium"
					android:textSize="14sp"
					android:textColor="@color/primary"
					android:gravity="center_vertical"
					android:text="@string/auto_card_title"/>

				<LinearLayout
					android:layout_height="wrap_content"
					android:layout_width="fill_parent"
					android:id="@+id/auto_list"
					android:orientation="vertical"/>

				<FrameLayout
					android:layout_width="match_parent"
					android:layout_height="48dp">

					<TextView
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_gravity="center|start"
						android:text="Comment on Autonomous"/>

					<TextView
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:id="@+id/comment_auto_field"
						android:layout_gravity="center|end"/>

				</FrameLayout>

			</LinearLayout>

			<View
				android:layout_width="fill_parent"
				android:layout_height="1dp"
				android:layout_marginTop="16dp"
				android:background="?android:listDivider"/>

			<LinearLayout
				android:layout_height="wrap_content"
				android:layout_width="fill_parent"
				android:orientation="vertical"
				android:paddingEnd="16dp"
				android:paddingStart="16dp">

				<TextView
					android:layout_height="48dp"
					android:fontFamily="sans-serif-medium"
					android:textSize="14sp"
					android:textColor="@color/primary"
					android:gravity="center_vertical"
					android:layout_width="wrap_content"
					android:text="@string/abilities_card_title"/>

				<LinearLayout
					android:layout_height="wrap_content"
					android:layout_width="fill_parent"
					android:id="@+id/abilities_list"
					android:orientation="vertical"/>

				<FrameLayout
					android:layout_width="match_parent"
					android:layout_height="48dp">

					<TextView
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:text="Comment on the robot's abilities"
						android:layout_gravity="center|start"/>

					<TextView
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_gravity="center|end"
						android:id="@+id/comment_abilities_field"/>

				</FrameLayout>

			</LinearLayout>

		</LinearLayout>

	</ScrollView>

</RelativeLayout>