<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="wrap_content">

	<android.support.v7.widget.CardView
		xmlns:android="http://schemas.android.com/apk/res/android"
		xmlns:cardview="http://schemas.android.com/apk/res-auto"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginBottom="4dp"
		android:layout_marginEnd="8dp"
		android:layout_marginStart="8dp"
		android:layout_marginTop="4dp"
		cardview:cardCornerRadius="2dp"
		cardview:cardBackgroundColor="@color/white"
		cardview:cardElevation="2dp">

		<LinearLayout
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical">

			<FrameLayout
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:paddingLeft="@dimen/default_padding_keyline"
				android:paddingStart="@dimen/default_padding_keyline"
				android:paddingRight="@dimen/default_padding_keyline"
				android:paddingEnd="@dimen/default_padding_keyline"
				android:paddingTop="24dp"
				android:paddingBottom="16dp">

				<TextView
					android:id="@+id/match_number"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:textAppearance="@style/TextAppearance.AppCompat.Headline"/>

			</FrameLayout>

			<LinearLayout
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:orientation="vertical"
				android:paddingEnd="@dimen/default_padding_keyline"
				android:paddingStart="@dimen/default_padding_keyline">

				<LinearLayout
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:orientation="vertical">

					<TextView
						android:layout_width="wrap_content"
						android:layout_height="48dp"
						android:fontFamily="sans-serif-medium"
						android:gravity="center_vertical"
						android:text="@string/auto_card_title"
						android:textColor="@color/primary"
						android:textSize="14sp"/>

					<LinearLayout
						android:id="@+id/auto_match_list"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:orientation="vertical"/>

					<FrameLayout
						android:layout_width="fill_parent"
						android:layout_height="48.0dip">

						<TextView
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:layout_gravity="center_vertical"
							android:text="@string/auto_points"/>

						<TextView
							android:id="@+id/points_auto_label"
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:layout_gravity="center_vertical|end"/>

					</FrameLayout>

					<FrameLayout
						android:layout_width="fill_parent"
						android:layout_height="wrap_content"
						android:minHeight="48dp">

						<TextView
							android:id="@+id/comment_auto_label"
							android:layout_width="match_parent"
							android:layout_height="wrap_content"
							android:layout_gravity="center_vertical"
							android:gravity="center"/>
					</FrameLayout>

				</LinearLayout>

				<LinearLayout
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:orientation="vertical">

					<TextView
						android:layout_width="wrap_content"
						android:layout_height="48dp"
						android:fontFamily="sans-serif-medium"
						android:gravity="center_vertical"
						android:text="@string/tele_card_title"
						android:textColor="@color/primary"
						android:textSize="14sp"/>

					<LinearLayout
						android:id="@+id/tele_match_list"
						android:layout_width="fill_parent"
						android:layout_height="wrap_content"
						android:orientation="vertical"/>

					<FrameLayout
						android:layout_width="match_parent"
						android:layout_height="48dp">

						<TextView
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:layout_gravity="center_vertical"
							android:text="@string/total_points"/>

						<TextView
							android:id="@+id/points_total_label"
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:layout_gravity="center_vertical|end"/>

					</FrameLayout>

					<FrameLayout
						android:layout_width="fill_parent"
						android:layout_height="wrap_content"
						android:minHeight="48dp">

						<TextView
							android:id="@+id/comments_tele_label"
							android:layout_width="fill_parent"
							android:layout_height="wrap_content"
							android:layout_gravity="center_vertical"
							android:gravity="center"/>
					</FrameLayout>

				</LinearLayout>

			</LinearLayout>

		</LinearLayout>

	</android.support.v7.widget.CardView>

</FrameLayout>